Housekeeper pricing Iteration #2
#1008
- added floors, services, and pets based on feedback from Roger Miller

--- a/app/source/html/activities/zServiceProfessionalServiceEditor.html
+++ b/app/source/html/activities/zServiceProfessionalServiceEditor.html
@@ -99,7 +99,30 @@
                             </div>
                             </div>
                         <div style="margin: 15px">
-                            <label>Square footage</label>
+                            <label>Floors</label>
+                            <div class="row">
+                            <label class="btn btn-default">
+                                <span>1</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>2</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>3</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>4</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>5</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>More</span>
+                            </label>
+                            </div>
+                            </div>
+                        <div style="margin: 15px">
+                            <label>Estimated square footage</label>
                             <div class="row">
                                 <span class="col-xs-12 col-sm-5 form-group">
                                     <label class="control-label sr-only">Sq Feet</label>
@@ -110,6 +133,61 @@
                                 </span>
                             </div>
                         </div>
+                        <div style="margin: 15px">
+                            <label>Pets</label>
+                            <div class="row">
+                            <label class="btn btn-default">
+                                <span>Dog(s)</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Cat(s)</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Fish</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Reptile(s)</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Bird(s)</span>
+                            </label>
+                            </div>
+                            </div>
+                        <div style="margin: 15px">
+                            <label>Included</label>
+                            <div class="row"> 
+                            <label class="btn btn-default">
+                                <span>Appliance wipedowns</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Bathroom cleaning</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Bed making</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Cabinet cleaning</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Dusting</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Mopping</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Sweeping</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Vacuuming</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Cleaning products</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Add new <i class="fa fa-fw ion-plus"></i></span>
+                            </label>
+                            </div>
+                            </div>
                         <div class="form-group">
                             <label class="control-label"><span>Description</span></label>
                             <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number">
