--- a/app/source/html/activities/mockupPsychotherapist.html
+++ b/app/source/html/activities/mockupPsychotherapist.html
@@ -13,7 +13,7 @@
             <div class="col-md-7 col-sm-reset">
                 <form class="container-fluid LightForm" role="form">
                     <h2 class="SectionTitle">
-                        <span>Add new Psychotherapist services</span>
+                        <span>Add a new Psychotherapist service</span>
                         <span class="pull-right hidden-xs hidden-sm"><a class="hidden-xs hidden-sm" href="https://loconomics.com/#!/help/relatedArticles/201967166-listing-and-pricing-your-services" target="_blank">Help <i class="fa fa-fw ion-ios-help-outline"></i></a>
                         </span>
                     </h2>                       
@@ -97,6 +97,11 @@
                         <div class="form-group">
                             <label class="control-label"><span>What can clients expect with the service?</span></label>
                             <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number" placeholder="Describe the Pyschotherapist services you'll provide">
+                            </textarea>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label"><span>Are there any time restrictions for clients booking this service?</span></label>
+                            <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number" placeholder="e.g., Weekday mornings only">
                             </textarea>
                         </div>
                     <div class="LightForm-submitBar">
