--- a/app/source/html/activities/mockupHouseCleanerServiceEditor.html
+++ b/app/source/html/activities/mockupHouseCleanerServiceEditor.html
@@ -43,13 +43,6 @@
 -->
                             </div>
                         </div>
-                        <div class="col-xs-12">
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox"> <span>This service is for the first-time only</span>  
-                                </label>
-                            </div>
-                        </div>
                         <div class="PricingSection">
                             <div class="row">
                                 <label>Where can this service be booked?</label>
@@ -248,6 +241,19 @@
                                 </div>
                             </div>
                         </div> 
+                        <div class="PricingSection">
+                            <div class="row">
+                                <label>This price is good for:</label>
+                                <div class="Select Select-block ">
+                                    <select class="select-unstyled selectpicker">
+                                         <option value="0">First-time cleaning</option>
+                                         <option value="1">Cleaning every two weeks</option>
+                                         <option value="2">Cleaning every four weeks</option>
+                                         <option value="3">Spring cleaning</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
                         <div class="form-inline isolated">
                             <label class="control-label">How much time will the service take?</label>
                             <div class="row">
